Wed Apr 14 08:44:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/Exceptions/Receiver/ExceptionT_Receiver.mpc
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender.mpc
        Change to long project names.

Wed Apr 14 07:29:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.h:
          Removed obsolete include

        * ciao/Servants/Servant_Impl_Base.cpp:
          Removed unneeded return after throw

        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
          layout changes for debug message

        * examples/DevGuideExamples/Messenger/Administrator_Client.cpp:
          Don't use full CCM methods

        * performance-tests/Benchmark/RoundTrip/client.cpp:
          Const changes

Wed Apr 14 07:13:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Listen_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.cpp:
          Used portstatuslistener instead of DataReaderListener to
          determine listening mask.

Wed Apr 14 07:11:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidl3toidl2defaults.mpb:
        * MPC/config/taoidl3toid2_ccm_lw.mpb:
        * MPC/config/taoidl3toidl2defaults.mpb:
          Added support for LwCCM

Wed Apr 14 05:56:12 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/performance-tests/Throughput/Receiver/Throughput_Receiver_exec.h:
        * connectors/dds4ccm/performance-tests/Throughput/Receiver/Throughput_Receiver_exec.cpp:
          Layout changes. Turned a class variable into a local variable.

        * connectors/dds4ccm/tests/SetConnectorAttributes/Component:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component.idl:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component.mpc: